--- a/que-estudiamos.html
+++ b/que-estudiamos.html
@@ -55,24 +55,26 @@
     <div class="container">
         <div class="row">  
 
-            <!-- Title -->
-            <div class="title">
-                <h1>¿Qué estudiamos?</h1> 
-            </div>
-            <hr>
-
-            <!-- Note -->
-            <div class="alert-note">
-                <div>
-                    Para saber más acerca de los grupos de estudio, pulsá encima de ellos. <br>
-                    Si querés participar, sólo tenés que enviar un mail al grupo deseado. En breve te vamos a estar contactando.
+            <section class="titles">
+                <!-- Title -->
+                <div class="title">
+                    <h1>¿Qué estudiamos?</h1> 
                 </div>
-            </div>
+                <hr>
 
-            <!-- Subtitle -->
-            <div class="subtitle">
-                <h2>Grupos de estudio</h2>
-            </div>
+                <!-- Note -->
+                <div class="alert-note">
+                    <div>
+                        Para saber más acerca de los grupos de estudio, pulsá encima de ellos. <br>
+                        Si querés participar, sólo tenés que enviar un mail al grupo deseado. En breve te vamos a estar contactando.
+                    </div>
+                </div>
+
+                <!-- Subtitle -->
+                <div class="subtitle">
+                    <h2>Grupos de estudio</h2>
+                </div>
+            </section>
 
             <!-- Groups -->
             <section class="groups-section">
@@ -85,6 +87,28 @@
                                 <a href="mailto:abaenpsicouba.mepc@gmail.com"><i class="fas fa-envelope"></i></a>
                             </li>
                         </ul> 
+                    </div>
+                </div>
+                <div class="column">
+                    <a href="#"><img class="avatar" src="./img/avatar.jpg" alt="Avatar Ciencias Cognitivas"></a>
+                    <div class="avatar-title">
+                    <h2><a href="#">Ciencias Cognitivas</a></h2> 
+                        <ul class="network-icon" aria-hidden="true">
+                            <li>
+                                <a href="mailto:cs.cognitivas.mepc@gmail.com"><i class="fas fa-envelope"></i></a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="column">
+                    <a href="#"><img class="avatar" src="./img/avatar.jpg" alt="Avatar Ciencias Cognitivas"></a>
+                    <div class="avatar-title">
+                    <h2><a href="#">Ciencias Cognitivas</a></h2> 
+                        <ul class="network-icon" aria-hidden="true">
+                            <li>
+                                <a href="mailto:cs.cognitivas.mepc@gmail.com"><i class="fas fa-envelope"></i></a>
+                            </li>
+                        </ul>
                     </div>
                 </div>
                 <div class="column">
