improve como-colaborar!

--- a/como-colaborar.html
+++ b/como-colaborar.html
@@ -54,6 +54,13 @@
     </header>
 
     <!-- Features -->
+    <section class="titles">
+        <!-- Title -->
+        <div class="title">
+            <h1>¿Cómo colaborar?</h1> 
+        </div>
+        <hr>
+    </section>
     <section class="features-section">
         <div class="feature">
             <i class="feature-icon"><img src="./img/azul1.png" alt="logo de MEPC"></i>
