--- a/contacto.html
+++ b/contacto.html
@@ -21,7 +21,7 @@
     <link rel="manifest" href="/site.webmanifest">
 
     <!-- CSS -->
-    <link rel="stylesheet" type="text/css" href="css/styles.css">
+    <link rel="stylesheet" type="text/css" href="css/contacto.css">
 
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
@@ -52,6 +52,23 @@
             </div>
         </nav>
     </header>
+
+    <!-- Contact -->
+    <form class="form-wrapper" name="contact" method="POST" action="https://formspree.io/f/mleadzdo">
+        <div class="form-group">
+          <label class="sr-only" for="inputName">Nombre</label>
+          <input type="text" name="name" class="form-control" id="inputName" placeholder="Nombre" required="">
+        </div>
+        <div class="form-group">
+          <label class="sr-only" for="inputEmail">Email</label>
+          <input type="email" name="email" class="form-control" id="inputEmail" placeholder="Email" required="">
+        </div>
+        <div class="form-group">
+          <label class="sr-only" for="inputMessage">Mensaje</label>
+          <textarea name="message" class="form-control" id="inputMessage" rows="5" placeholder="Mensaje" required=""></textarea>
+        </div>
+        <button type="submit" class="btn">Enviar</button>
+    </form>
 
     <!-- Footer -->
     <footer class="site-footer">
