contact title & button!

--- a/contacto.html
+++ b/contacto.html
@@ -53,6 +53,14 @@
         </nav>
     </header>
 
+    <section class="titles">
+        <!-- Title -->
+        <div class="title">
+            <h1>Contacto</h1> 
+        </div>
+        <hr>
+    </section>
+
     <!-- Contact -->
     <form class="form-wrapper" name="contact" method="POST" action="https://formspree.io/f/mleadzdo">
         <div class="form-group">
