add mepc.png & inicio!

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <meta name="description" content="Movimiento Estudiantil por la Psicología Científica">
     <meta name="author" content="MEPC">
     <meta name="keywords" content="mepc psicologia cientifica">
-    <meta name="twitter:image:src" content="https://francosbenitez.github.io/mepc/img/social.png">
-    <meta property="og:image" content="https://francosbenitez.github.io/mepc/img/social.png">
+    <meta name="twitter:image:src" content="https://francosbenitez.github.io/mepc/img/mepc.png">
+    <meta property="og:image" content="https://francosbenitez.github.io/mepc/img/mepc.png">
 
     <!-- Title -->
     <title>Movimiento Estudiantil por la Psicología Científica - MEPC</title>
@@ -39,7 +39,7 @@
                 <a href="./"><img src="./img/logo.svg" alt="logo de MEPC"></a>
             </div>
             <ul class="nav-ul">
-                <li><a href="./">¿Quiénes somos?</a></li>
+                <li><a href="./">Inicio</a></li>
                 <li><a href="./como-colaborar.html">¿Cómo colaborar?</a></li>
                 <li><a href="./que-estudiamos.html">¿Qué estudiamos?</a></li>
                 <li><a href="./documentos.html">Documentos</a></li>
