--- a/index-2.html
+++ b/index-2.html
@@ -54,7 +54,7 @@
     </header>
 
     <!-- JavaScript -->
-    <script src="js/navbar.js"></script>
+    <script src="js/navbar-2.js"></script>
 </body>
 
 </html>
