--- a/index-2.html
+++ b/index-2.html
@@ -35,7 +35,7 @@
     <!-- Navbar -->
     <header class="main-header">
         <nav class="navbar flex">
-            <div class="logo">
+            <div class="nav-logo">
                 <a href="./"><img src="./img/logo.svg" alt="logo de MEPC"></a>
             </div>
             <ul class="nav-ul">
