--- a/index-2.html
+++ b/index-2.html
@@ -45,7 +45,7 @@
                 <li><a href="./documentos.html">Documentos</a></li>
                 <li><a href="./contacto.html">Contacto</a></li>
             </ul>
-            <div class="button">
+            <div class="nav-btn">
                 <div class="line-1"></div>
                 <div class="line-2"></div>
                 <div class="line-3"></div>
