--- a/index-2.html
+++ b/index-2.html
@@ -34,7 +34,7 @@
     
     <!-- Navbar -->
     <header class="main-header">
-        <nav class="navbar flex">
+        <nav class="navbar">
             <div class="nav-logo">
                 <a href="./"><img src="./img/logo.svg" alt="logo de MEPC"></a>
             </div>
