quit text-wapper!

--- a/index-2.html
+++ b/index-2.html
@@ -72,11 +72,11 @@
     <!-- About -->
     <section id="about">
         <div class="container-about">
-            <div class="avatar"><img src="./img/avatar.jpg" alt="avatar de MEPC">
+            <div class="avatar-img"><img src="./img/avatar.jpg" alt="avatar de MEPC">
                 <div class="avatar-description">
                     <h2>MEPC</h2>
                     <h3>Movimiento Estudiantil por la Psicología Científica</h3>
-                    <ul class="network-icon flex" aria-hidden="true">
+                    <ul class="network-icon" aria-hidden="true">
                         <li><a href="mailto:mepc.org@gmail.com" target="_blank"><i class="fas fa-envelope fa-2x"></i></a></li>
                         <li><a href="https://www.facebook.com/mepc.oficial/" target="_blank"><i class="fab fa-facebook fa-2x"></i></a></li>
                         <li><a href="https://www.facebook.com/groups/2641583789449049" target="_blank"><i class="fab fa-facebook fa-2x"></i></a></li>
@@ -90,7 +90,7 @@
             </div>
         </div>
         <div class="container-video">
-            <div class="text-wrapper">
+            <div>
                 <div class="video">
                     <iframe width="800" height="500" src="https://www.youtube.com/embed/ieSG5JVLOow"></iframe>
                 </div>
