--- a/index-2.html
+++ b/index-2.html
@@ -90,11 +90,11 @@
             </div>
         </div>
         <div class="container-video">
-            <div>
-                <div class="video">
+            <div class="video">
+                <div class="video-link">
                     <iframe width="800" height="500" src="https://www.youtube.com/embed/ieSG5JVLOow"></iframe>
                 </div>
-                <div class="description">
+                <div class="video-description">
                     </br>
                     <hr>
                     </br>
