--- a/index-2.html
+++ b/index-2.html
@@ -55,15 +55,15 @@
 
     <!-- Hero -->
     <section id="hero">
-        <div class="container">
-            <div class="hero-description box">
+        <div class="container-hero">
+            <div class="hero-description">
                 <h1>¿Quiénes somos?</h1>
                 <h2>Somos una organización independiente de <br>estudiantes y graduados, que tenemos como<br> 
                     fin promover el pensamiento crítico y la<br> psicología científica, formarnos entre los<br> 
                     integrantes en temas afines y reclamar por<br> una formación
                     actualizada, plural y científica.</h2>
             </div>
-            <div class="hero-img box">
+            <div class="hero-img">
                 <img src="./img/hero.png" alt="logo de portada MEPC">
             </div>
         </div>
@@ -71,7 +71,7 @@
 
     <!-- About -->
     <section id="about">
-        <div class="container-about">
+        <div class="container-avatar">
             <div class="avatar-img"><img src="./img/avatar.jpg" alt="avatar de MEPC">
                 <div class="avatar-description">
                     <h2>MEPC</h2>
