--- a/index-2.html
+++ b/index-2.html
@@ -72,7 +72,8 @@
     <!-- About -->
     <section id="about">
         <div class="container-avatar">
-            <div class="avatar-img"><img src="./img/avatar.jpg" alt="avatar de MEPC">
+            <div class="avatar">
+                <img src="./img/avatar.jpg" alt="avatar de MEPC">
                 <div class="avatar-description">
                     <h2>MEPC</h2>
                     <h3>Movimiento Estudiantil por la Psicología Científica</h3>
