--- a/index-2.html
+++ b/index-2.html
@@ -36,7 +36,7 @@
     <header class="main-header">
         <nav class="navbar">
             <div class="nav-logo">
-                <a href="./"><img src="./img/logo.svg" alt="logo de MEPC"></a>
+                <a href="./"><img src="./img/logo.svg" alt="Logo de MEPC"></a>
             </div>
             <ul class="nav-ul">
                 <li><a href="./">Inicio</a></li>
@@ -64,7 +64,7 @@
                     actualizada, plural y científica.</h2>
             </div>
             <div class="hero-img">
-                <img src="./img/hero.png" alt="logo de portada MEPC">
+                <img src="./img/hero.png" alt="Logo de portada MEPC">
             </div>
         </div>
     </section>
@@ -73,7 +73,7 @@
     <section id="about">
         <div class="container-avatar">
             <div class="avatar">
-                <img src="./img/avatar.jpg" alt="avatar de MEPC">
+                <img src="./img/avatar.jpg" alt="Avatar de MEPC">
                 <div class="avatar-description">
                     <h2>MEPC</h2>
                     <h3>Movimiento Estudiantil por la Psicología Científica</h3>
