--- a/index-2.html
+++ b/index-2.html
@@ -8,8 +8,8 @@
     <meta name="description" content="Movimiento Estudiantil por la Psicología Científica">
     <meta name="author" content="MEPC">
     <meta name="keywords" content="mepc psicologia cientifica">
-    <meta name="twitter:image:src" content="https://francosbenitez.github.io/mepc/img/mepc.png">
-    <meta property="og:image" content="https://francosbenitez.github.io/mepc/img/mepc.png">
+    <meta name="twitter:image:src" content="https://francosbenitez.github.io/mepc/img/social.png">
+    <meta property="og:image" content="https://francosbenitez.github.io/mepc/img/social.png">
 
     <!-- Title -->
     <title>Movimiento Estudiantil por la Psicología Científica - MEPC</title>
