--- a/index-2.html
+++ b/index-2.html
@@ -63,7 +63,7 @@
                     integrantes en temas afines y reclamar por<br> una formación
                     actualizada, plural y científica.</h2>
             </div>
-            <div class="hero-img">
+            <div class="hero-image">
                 <img src="./img/hero.png" alt="Logo de portada MEPC">
             </div>
         </div>
@@ -73,7 +73,9 @@
     <section id="about">
         <div class="container-avatar">
             <div class="avatar">
-                <img src="./img/avatar.jpg" alt="Avatar de MEPC">
+                <div class="avatar-image">
+                    <img src="./img/avatar.jpg" alt="Avatar de MEPC">
+                </div>
                 <div class="avatar-description">
                     <h2>MEPC</h2>
                     <h3>Movimiento Estudiantil por la Psicología Científica</h3>
