--- a/index-2.html
+++ b/index-2.html
@@ -103,14 +103,31 @@
                     </br>
                     </hr>
                     <p>
-                        Somos el Movimiento Estudiantil por la Psicología Científica (MEPC), un grupo de estudiantes y graduades autoconvocades de diferentes puntos del país que compartimos un mismo ideal: el desarrollo de una formación y una práctica profesional basadas en
-                        fundamentos científicos. Nacimos en la Facultad de Psicología de la Universidad de Buenos Aires (UBA), y ya sumamos casi 3000 personas de diferentes casas de estudio que creemos que la ciencia es el camino que debemos seguir en
-                        psicología para mejorar nuestra formación.
+                        Somos el Movimiento Estudiantil por la Psicología Científica (MEPC), un grupo de estudiantes y 
+                        graduades autoconvocades de diferentes puntos del país que compartimos un mismo ideal: 
+                        el desarrollo de una formación y una práctica profesional basadas en
+                        fundamentos científicos. Nacimos en la Facultad de Psicología de la Universidad de Buenos Aires (UBA), 
+                        y ya sumamos casi 3000 personas de diferentes casas de estudio que creemos que la ciencia es el camino que 
+                        debemos seguir en psicología para mejorar nuestra formación.
                     </p>
                 </div>
             </div>
         </div>
     </section>
+
+    <!-- Footer -->
+    <footer class="site-footer">
+        <p>MEPC © 2021</p>
+        <p>Desarrollado con 💚 y <a href="https://github.com/francosbenitez/mepc" target="_blank" rel="noopener">
+            <i class="fas fa-code-branch"></i></a> por <a href="https://francosbenitez.github.io" target="_blank" rel="noopener">
+                Franco Sebastián Benítez</a>
+            <span class="float-right" aria-hidden="true">
+                <a href="#" class="back-to-top">
+                    <i class="fas fa-chevron-up fa-2x"></i>
+                </a>
+            </span>
+        </p>
+    </footer>
 
     <!-- JavaScript -->
     <script src="js/navbar-2.js"></script>
