--- a/index-2.html
+++ b/index-2.html
@@ -118,7 +118,7 @@
     <!-- Footer -->
     <footer class="site-footer">
         <p>MEPC © 2021</p>
-        <p>Desarrollado con 💚 y <a href="https://github.com/francosbenitez/mepc" target="_blank" rel="noopener">
+        <p>Desarrollado con ☕️ y <a href="https://github.com/francosbenitez/mepc" target="_blank" rel="noopener">
             <i class="fas fa-code-branch"></i></a> por <a href="https://francosbenitez.github.io" target="_blank" rel="noopener">
                 Franco Sebastián Benítez</a>
             <span class="float-right" aria-hidden="true">
