--- a/index-2.html
+++ b/index-2.html
@@ -39,11 +39,11 @@
                 <a href="./"><img src="./img/logo.svg" alt="Logo de MEPC"></a>
             </div>
             <ul class="nav-ul">
-                <li><a href="./">Inicio</a></li>
-                <li><a href="./como-colaborar.html">¿Cómo colaborar?</a></li>
-                <li><a href="./que-estudiamos.html">¿Qué estudiamos?</a></li>
-                <li><a href="./documentos.html">Documentos</a></li>
-                <li><a href="./contacto.html">Contacto</a></li>
+                <li class="main-navbar link active"><a href="./">Inicio</a></li>
+                <li class="link"><a href="./como-colaborar.html">¿Cómo colaborar?</a></li>
+                <li class="link"><a href="./que-estudiamos.html">¿Qué estudiamos?</a></li>
+                <li class="link"><a href="./documentos.html">Documentos</a></li>
+                <li class="link"><a href="./contacto.html">Contacto</a></li>
             </ul>
             <div class="nav-btn">
                 <div class="line-1"></div>
@@ -58,7 +58,7 @@
         <div class="container-hero">
             <div class="hero-description">
                 <h1>¿Quiénes somos?</h1>
-                <h2>Somos una organización independiente de <br>estudiantes y graduados, que tenemos como<br> 
+                <h2>Somos una organización independiente de <br>estudiantes y graduades, que tenemos como<br> 
                     fin promover el pensamiento crítico y la<br> psicología científica, formarnos entre los<br> 
                     integrantes en temas afines y reclamar por<br> una formación
                     actualizada, plural y científica.</h2>
