--- a/como-colaborar.html
+++ b/como-colaborar.html
@@ -21,7 +21,7 @@
     <link rel="manifest" href="/site.webmanifest">
 
     <!-- CSS -->
-    <link rel="stylesheet" type="text/css" href="css/como-colaborar.css">
+    <link rel="stylesheet" type="text/css" href="css/styles.css">
 
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
@@ -34,18 +34,18 @@
 
     <!-- Navbar -->
     <header class="main-header">
-        <nav class="navbar flex">
-            <div class="logo">
-                <a href="./"><img src="./img/logo.svg" alt="logo de MEPC"></a>
+        <nav class="navbar">
+            <div class="nav-logo">
+                <a href="./"><img src="./img/logo.svg" alt="Logo de MEPC"></a>
             </div>
             <ul class="nav-ul">
-                <li><a href="./">¿Quiénes somos?</a></li>
-                <li><a href="./como-colaborar.html">¿Cómo colaborar?</a></li>
-                <li><a href="./que-estudiamos.html">¿Qué estudiamos?</a></li>
-                <li><a href="./documentos.html">Documentos</a></li>
-                <li><a href="./contacto.html">Contacto</a></li>
+                <li class="main-navbar link active"><a href="./">Inicio</a></li>
+                <li class="link"><a href="./como-colaborar.html">¿Cómo colaborar?</a></li>
+                <li class="link"><a href="./que-estudiamos.html">¿Qué estudiamos?</a></li>
+                <li class="link"><a href="./documentos.html">Documentos</a></li>
+                <li class="link"><a href="./contacto.html">Contacto</a></li>
             </ul>
-            <div class="button">
+            <div class="nav-btn">
                 <div class="line-1"></div>
                 <div class="line-2"></div>
                 <div class="line-3"></div>
@@ -54,28 +54,25 @@
     </header>
 
     <!-- Features -->
-    <section class="titles">
-        <!-- Title -->
-        <div class="title">
-            <h1>¿Cómo colaborar?</h1> 
-        </div>
+    <section class="title">
+        <h1>¿Cómo colaborar?</h1> 
         <hr>
     </section>
     <section class="features-section">
         <div class="feature">
-            <i class="feature-icon"><img src="./img/azul1.png" alt="logo de MEPC"></i>
+            <i class="feature-icon"><img src="./img/corre-la-voz.png" alt="Logo de Corré la voz"></i>
             <h1 class="feature-title">Corré la voz</h1>
             <p class="feature-description">Una mejor educación es para todos. Ayudanos a correr la voz siguiéndonos y compartiendo 
                 nuestros contenidos en Twitter, YouTube, Facebook, Instagram y otras redes sociales.</p>
         </div>
         <div class="feature">
-            <i class="feature-icon"><img src="./img/azul2.png" alt="logo de MEPC"></i>
+            <i class="feature-icon"><img src="./img/equipo.png" alt="Logo de Unite a nuestro equipo"></i>
             <h1 class="feature-title">Unite a nuestro equipo</h1>
             <p class="feature-description">Podés unirte a nuestros departamentos enviándonos un mail. 
                 También podés colaborar con el sitio web a través de GitHub.</p>
         </div>
         <div class="feature">
-            <i class="feature-icon"><img src="./img/azul3.png" alt="logo de MEPC"></i>
+            <i class="feature-icon"><img src="./img/grupos-de-estudio.png" alt="Logo de Unite a nuestros grupos de estudio"></i>
             <h1 class="feature-title">Unite a nuestros grupos de estudio</h1>
             <p class="feature-description">Contamos con nueve grupos de estudio sobre diferentes temas relacionados a la psicología científica. 
                 ¡Sumándote a ellos podremos compartir y aprender en conjunto!</p>
@@ -98,18 +95,16 @@
 
     <!-- Footer -->
     <footer class="site-footer">
-        <div class="copyright">
-            <p>MEPC © 2021</p>
-            <p class="developed-by">Desarrollado con 💚 y <a href="https://github.com/francosbenitez/mepc" target="_blank" rel="noopener"><i class="fas fa-code-branch"></i></a> por <a href="https://francosbenitez.github.io" target="_blank" rel="noopener">Franco Sebastián Benítez</a>
+        <p>MEPC © 2021</p>
+        <p>Desarrollado con ☕️ y <a href="https://github.com/francosbenitez/mepc" target="_blank" rel="noopener">
+            <i class="fas fa-code-branch"></i></a> por <a href="https://francosbenitez.github.io" target="_blank" rel="noopener">
+                Franco Sebastián Benítez</a>
             <span class="float-right" aria-hidden="true">
-            <a href="#" class="back-to-top">
-                <span class="button-icon">
+                <a href="#" class="back-to-top">
                     <i class="fas fa-chevron-up fa-2x"></i>
-                </span>
-            </a>
-            </p>
+                </a>
             </span>
-        </div>
+        </p>
     </footer>
     
     <!-- JavaScript -->
