--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <a href="./"><img src="./img/logo.svg" alt="Logo de MEPC"></a>
             </div>
             <ul class="nav-ul">
-                <li class="main-navbar link active"><a href="./">Inicio</a></li>
+                <li class="main-navbar link active"><a href="./">¿Quiénes somos?</a></li>
                 <li class="link"><a href="./como-colaborar.html">¿Cómo colaborar?</a></li>
                 <li class="link"><a href="./que-estudiamos.html">¿Qué estudiamos?</a></li>
                 <li class="link"><a href="./documentos.html">Documentos</a></li>
