--- a/como-colaborar.html
+++ b/como-colaborar.html
@@ -54,7 +54,7 @@
     </header>
 
     <!-- Features -->
-    <section class="title">
+    <section class="titles">
         <h1>¿Cómo colaborar?</h1> 
         <hr>
     </section>
