--- a/que-estudiamos.html
+++ b/que-estudiamos.html
@@ -90,9 +90,9 @@
                 </div>
             </div>
             <div class="column">
-                <a href="#"><img class="group-avatar" src="./img/avatar.jpg" alt="Avatar Ciencias Cognitivas"></a>
+                <a href="#"><img class="group-avatar" src="./img/clinica.png" alt="Avatar Clínica"></a>
                 <div class="avatar-title">
-                <h2><a href="#">Ciencias Cognitivas</a></h2> 
+                <h2><a href="#">Clínica</a></h2> 
                     <ul class="network-icon" aria-hidden="true">
                         <li>
                             <a href="mailto:cs.cognitivas.mepc@gmail.com"><i class="fas fa-envelope"></i></a>
@@ -101,9 +101,9 @@
                 </div>
             </div>
             <div class="column">
-                <a href="#"><img class="group-avatar" src="./img/avatar.jpg" alt="Avatar Ciencias Cognitivas"></a>
+                <a href="#"><img class="group-avatar" src="./img/evolutiva.png" alt="Avatar Evolutiva"></a>
                 <div class="avatar-title">
-                <h2><a href="#">Ciencias Cognitivas</a></h2> 
+                <h2><a href="#">Evolutiva</a></h2> 
                     <ul class="network-icon" aria-hidden="true">
                         <li>
                             <a href="mailto:cs.cognitivas.mepc@gmail.com"><i class="fas fa-envelope"></i></a>
