--- a/que-estudiamos.html
+++ b/que-estudiamos.html
@@ -53,7 +53,7 @@
         </nav>
     </header>
 
-    <!-- Groups -->
+    <!-- Study groups -->
     <div class="row">  
         <section class="titles">
             <h1>¿Qué estudiamos?</h1> 
